<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Setting</string>
    <string name="title_main">Setting</string>
    <string name="title_network">Network</string>
    <string name="title_universal">Universal</string>
    <string name="title_restore">Restore</string>
    <string name="title_other">Other</string>
    <string name="title_about">About</string>
    <string name="title_language">Language</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_ok">OK</string>
    <string name="title_wifi">Wi-Fi</string>
    <string name="title_ethernet">Ethernet</string>
    <string name="title_hotpot">Portable Hotspot</string>
    <string name="title_add_wifi">Add Wi-Fi</string>
    <string name="network_on">On</string>
    <string name="network_off">Off</string>
    <string name="network_connected">Connected</string>
    <string name="network_connecting">Connecting</string>
    <string name="network_not_connected">Not Connected</string>
    <string name="network_disconnected">Disconnected</string>
    <string name="network_saved">Saved</string>
    <string name="title_password">Input Password:</string>
    <string name="network_connect">Connect</string>
    <string name="network_save">Save</string>
    <string name="network_disconnect">Disconnect</string>
    <string name="network_forget">Forget</string>
    <string name="network_connect_to">Connect to %s</string>
    <string name="network_delete">Delete</string>
    <string name="network_clear">Clear</string>
    <string name="network_hdcp_title">Manual Settings</string>
    <string name="network_ip_title">IP Address:</string>
    <string name="network_gateway_title">Gateway:</string>
    <string name="network_subnet_title">Subnet Mask:</string>
    <string name="network_dns1">DNS1:</string>
    <string name="network_dns2">DNS2:</string>
    <string name="network_wifi_result_error">Unknown error</string>
    <string name="network_wifi_result_timeout">Connection timeout</string>
    <string name="network_wifi_result_authentic_fail">Authentication failed</string>
    <string name="network_wifi_result_reject">Connection refused</string>
    <string name="network_wifi_result_fail">Connection fail</string>
    <string name="network_wifi_pw_error">Wrong password</string>
    <string name="network_invalid_input">Invalid Input</string>
    <string name="network_title_name">Name:</string>
    <string name="network_title_type">Type:</string>
    <string name="title_auto_connect">Auto Connect</string>
    <string name="title_connect_manually">Connect Manually</string>
    <string name="network_ethernet_not_available">Ethernet not available</string>
    <string name="title_proxy">Proxy</string>
    <string name="title_ip_setting">IP Setting</string>
    <string name="title_proxy_config">Proxy Configuration</string>
    <string name="title_proxy_host">Host</string>
    <string name="title_proxy_port">Port</string>
    <string name="title_bypass">Bypass Domain List</string>
    <string name="title_add_domain">Add Domain</string>
    <string name="title_edit_domain">Edit Domain</string>
    <string name="title_domain">Domain:</string>
    <string name="title_hotpot_setting">Hotspot Settings</string>
    <string name="title_hotpot_name">Network Name:</string>
    <string name="title_security_type">Security</string>
    <string name="str_universal_device_name">Device Name</string>
    <string name="str_universal_device_name_default">Smart_TV</string>
    <string name="str_universal_device_name_save">Save</string>
    <string name="str_universal_device_name_edit_tips">Please open WiFi!</string>
    <string name="str_universal_device_name_title">Edit Device Name</string>
    <string name="str_universal_device_name_save_success">Save device name successfully!</string>
    <string name="str_universal_device_name_save_failed">Save device name failed!</string>
    <string name="str_universal_device_name_empty">The device name cannot be empty!</string>
    <string name="str_universal_time">Time</string>
    <string name="str_universal_language">Language</string>
    <string name="str_universal_language_title">Language Setting</string>
    <string name="str_universal_security">Security</string>
    <string name="str_universal_inputmethod">Input Method</string>
    <string name="str_universal_storage">Storage</string>
    <string name="str_universal_storage_default">Removable Disk</string>
    <string name="str_universal_storage_title">Storage Space</string>
    <string name="str_universal_storage_internal">Internal Storage</string>
    <string name="str_universal_storage_free">Free</string>
    <string name="str_universal_time_auto">Automatic Date &amp; time</string>
    <string name="str_universal_timezone">Timezone Setting</string>
    <string name="str_universal_time_setting">Time Setting</string>
    <string name="str_universal_time_date_format">Date format</string>
    <string name="str_universal_time_time_24h">Use 24-hour format</string>
    <string name="str_about_legal_license">Open Source License</string>
    <string name="str_universal_storage_format">Format</string>
    <string name="str_universal_storage_format_success">Format successfully!</string>
    <string name="str_universal_storage_format_fail">formatting failed!</string>
    <string name="str_universal_storage_format_select_tips">Select the disk you want to format!</string>
    <string name="str_universal_date_time_year">Year</string>
    <string name="str_universal_date_time_month">Month</string>
    <string name="str_universal_date_time_day">Day</string>
    <string name="str_universal_date_time_hour">Hour</string>
    <string name="str_universal_date_time_minute">Minute</string>
    <string name="time_zone_gmt">GMT</string>
    <string name="str_universal_select_tip">Press \"OK\" to confirm select</string>
    <string name="str_universal_fomatting">Disk Formatting...</string>
    <string name="str_universal_language_ok">Save successfully</string>
    <string name="str_update_restore">System Restore</string>
    <string name="str_update_network_upgrade">Online Update</string>
    <string name="str_update_locale_upgrade">Local Update</string>
    <string name="str_update_restore_tip_title">Are you sure to restore system?</string>
    <string name="str_update_restore_tip_content">All system data will be erased and restored to factory default!</string>
    <string name="str_update_restore_now">Restore Now</string>
    <string name="str_update_restore_content">Restoring&#8230;</string>
    <string name="str_update_locale_tip_title">Please insert the USB storage device which has the correct firmware file in it, and select “YES” for upgrade.</string>
    <string name="str_update_file_not_found">File not found!</string>
    <string name="str_usb_device_not_found">Device not found! Please insert an USB device!</string>
    <string name="str_password_input_title">Input Password</string>
    <string name="str_password_input_sub_title">Password</string>
    <string name="str_password_input_ok">Yes</string>
    <string name="str_password_input_cancel">No</string>
    <string name="str_password_input_clear">Clear</string>
    <string name="str_password_error_tip">Please input correct password!</string>
    <string name="str_about_device_info_title">Device Info</string>
    <string name="str_about_device_name">Device Name</string>
    <string name="str_about_device_model">Device Model</string>
    <string name="str_about_device_ddr_info">DDR Info</string>
    <string name="str_about_device_android_version">Android Version</string>
	<string name="str_about_device_ota_version">Version</string>
    <string name="str_about_device_system_version">System Version</string>
    <string name="str_about_device_update_time">Last Updated Date</string>
    <string name="str_about_network_info_title">MAC Address</string>
    <string name="str_about_others_title">Other</string>
    <string name="str_about_license">Software OpenSource License</string>
    <string name="str_about_license_activity_unavailable">Software openSource license is not available</string>
    <string name="str_others_bluetooth_title">Bluetooth</string>
    <string name="str_others_bluetooth_paired_title">Paired Devices</string>
    <string name="str_others_bluetooth_paired_connect">Connected</string>
    <string name="str_others_bluetooth_paired_disconnect">Not Connected</string>
    <string name="str_others_bluetooth_paired_connecting">Connecting</string>
    <string name="str_others_bluetooth_disconnect_title">Do you want to disconnect from this device? Your device will disconnect from the device…</string>
    <string name="str_others_bluetooth_disconnect_cancel">Cancel</string>
    <string name="str_others_bluetooth_disconnect_ok">OK</string>
    <string name="str_others_bluetooth_connect_title">Do you want to connect to this device? Your device will request a connection to that device…</string>
    <string name="str_others_bluetooth_connect_cancel">Unpair</string>
    <string name="str_others_bluetooth_connect_ok">Connect</string>
    <string name="str_others_bluetooth_pair_title">Connect to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="str_others_bluetooth_pair_content">Pair Code\n<xliff:g id="device_code">%1$s</xliff:g>\nAllows access to address book and call logs\nAllows access to media audio\n…</string>
    <string name="str_others_bluetooth_pair_ok">Pair</string>
    <string name="str_others_bluetooth_pair_cancel">Cancel</string>
    <string name="str_others_bluetooth_can_pair_title">Available Devices</string>
    <string name="str_others_bluetooth_device_name_default">Unknown Device</string>
    <string name="str_others_bluetooth_scan">Scan</string>
    <string name="str_others_bluetooth_bound_success">Bound Successful</string>
    <string name="str_others_bluetooth_bound_fail">Bound Failed</string>
    <string name="str_others_bluetooth_pairing_pin_error_message">Unable to pair with <xliff:g id="device_name">%1$s</xliff:g> due to incorrect pin code or key</string>
    <string name="str_others_bluetooth_unbound_success">Unbound Successful</string>
    <string name="str_others_bluetooth_enable_tips">Bluetooth is opening</string>
    <string name="str_others_bluetooth_scan_tips">Bluetooth is scaning</string>
    <string name="str_others_tts_title">TTS</string>
    <string name="str_others_tts_language">Language</string>
    <string name="str_others_tts_speak_tv">Speech Output</string>
    <string name="str_others_account_title">Account</string>
    <string name="str_others_account_remove_tip">Please select the account you want to remove!</string>
    <string name="str_others_account_remove_fail">Failed to remove account!</string>
    <string name="str_others_system_sound_title">System Sound</string>
    <string name="str_others_log_title">Log Collection</string>
    <string name="str_others_reboot_title">Reboot Device</string>
    <string name="str_others_reboot_tip_title">Are you sure to restart the device immediately?</string>
    <string name="str_others_reboot_tip_text">Reboot</string>
    <string name="str_others_log_upload">Log Network Upload</string>
    <string name="str_others_log_locale_collect">Log Local Collection</string>
    <string name="str_others_account_delete">Delete</string>
    <string name="str_others_no_account">The account list is empty.</string>
    <string name="str_splash_company" translatable="false">KTC</string>
    <string name="str_splash_title" translatable="false">开发调试助手</string>
    <string name="str_splash_sign" translatable="false">\@智能软件部主导设计开发</string>
    <string name="str_home_title" translatable="false">KTC开发调试助手</string>
    <string name="str_home_about" translatable="false">关于</string>
    <string name="str_home_about_title" translatable="false">About Me</string>
    <string name="str_about_desc" translatable="false"> 开发者：智能软件部 </string>
</resources>