<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false">

        <TextView
            android:id="@+id/edit_ethernet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="186dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/title_ip_setting"
            android:textColor="@color/colorTextNormal"
            android:textSize="32sp"/>

        <ImageView
            android:id="@+id/split_line"
            android:layout_width="414dp"
            android:layout_height="5dp"
            android:layout_below="@+id/edit_ethernet_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:src="@drawable/gradient_line"/>

        <com.ktc.setting.view.custom.SettingViewContainer
            android:id="@+id/edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/split_line"
            android:layout_marginTop="26dp"
            app:duration="100"
            app:focusBg="@drawable/default_focus">

            <com.ktc.setting.view.custom.IpInputView
                android:id="@+id/edit_ip"
                android:layout_width="@dimen/normalViewWidth"
                android:layout_height="51dp"
                android:layout_below="@+id/edit_wifi_switch"
                android:layout_centerHorizontal="true"
                android:elevation="3px"
                app:title="@string/network_ip_title"/>

            <com.ktc.setting.view.custom.IpInputView
                android:id="@+id/edit_subnet"
                android:layout_width="@dimen/normalViewWidth"
                android:layout_height="51dp"
                android:layout_below="@+id/edit_ip"
                android:layout_centerHorizontal="true"
                android:elevation="3px"
                app:title="@string/network_subnet_title"/>

            <com.ktc.setting.view.custom.IpInputView
                android:id="@+id/edit_gateway"
                android:layout_width="@dimen/normalViewWidth"
                android:layout_height="51dp"
                android:layout_below="@+id/edit_subnet"
                android:layout_centerHorizontal="true"
                android:elevation="3px"
                app:title="@string/network_gateway_title"/>

            <com.ktc.setting.view.custom.IpInputView
                android:id="@+id/edit_dns1"
                android:layout_width="@dimen/normalViewWidth"
                android:layout_height="51dp"
                android:layout_below="@+id/edit_gateway"
                android:layout_centerHorizontal="true"
                android:elevation="3px"
                app:title="@string/network_dns1"/>

            <com.ktc.setting.view.custom.IpInputView
                android:id="@+id/edit_dns2"
                android:layout_width="@dimen/normalViewWidth"
                android:layout_height="51dp"
                android:layout_below="@+id/edit_dns1"
                android:layout_centerHorizontal="true"
                android:elevation="3px"
                app:title="@string/network_dns2"/>
				
			
            <Button
                android:id="@+id/button_cancel"
                style="@style/ButtonStyle"
                android:layout_width="220dp"
                android:layout_height="73dp"
				android:layout_alignLeft="@id/edit_dns2"
				android:layout_below="@+id/edit_dns2"
				android:layout_marginStart="70dp"
				android:layout_marginTop="29dp"
                android:text="@string/str_cancel"/>

            <Button
                android:id="@+id/button_ok"
                style="@style/ButtonStyle"
                android:layout_width="220dp"
                android:layout_height="73dp"
				android:layout_below="@+id/edit_dns2"
				android:layout_marginTop="29dp"
				android:layout_toEndOf="@id/button_cancel"
                android:layout_marginStart="107dp"
                android:text="@string/str_ok"/>	
				
        </com.ktc.setting.view.custom.SettingViewContainer>

 
    </RelativeLayout>
</ScrollView>